--- a/index.html
+++ b/index.html
@@ -1191,9 +1191,10 @@
         <a href="#milestone2">Milestone 2</a>
         <a href="#milestone3">Milestone 3</a>
         <a href="#milestone4">Milestone 4</a>
-		    <a href="#milestone5">Milestone 5</a>
-		    <a href="#milestone6">Milestone 6</a>
-		    <a href="#milestone7">Milestone 7</a>
+		<a href="#milestone5">Milestone 5</a>
+		<a href="#milestone6">Milestone 6</a>
+		<a href="#milestone7">Milestone 7</a>
+		<a href="#milestone8">Milestone 8</a>
       </div>
     </section>
 
@@ -3945,6 +3946,141 @@
       </div>
     </section>
   </div>
+
+
+	<h2 class="section-title" id="milestone8">Milestone 8</h2>
+    <div class="container">
+    <section class="section">
+        <h2 class="section-title">Prima utilizare și validarea MVP-ului</h2>
+        <p class="section-subtitle">Lansarea oficială și feedback-ul primilor utilizatori (12.01.2026)</p>
+
+        <div class="highlight-box">
+        <h3>Obiectiv: First Sale & MVP Usage</h3>
+        <p class="content-text">
+            Obiectivul acestui milestone a fost punerea MVP-ului în mâinile utilizatorilor reali pentru a confirma că aceștia sunt dispuși să folosească platforma și pentru a valida potențialul de monetizare. Am documentat procesul de lansare și am colectat dovezi pentru utilizarea activă a soluției.
+        </p>
+        </div>
+
+        <h3 class="subsection-title">1. Canale de distribuție și promovare</h3>
+        <p class="content-text">
+        Am folosit link-uri cu parametri UTM pentru a monitoriza traficul provenit din diferite surse:
+        </p>
+        <ul class="insights-list">
+        <li><strong>Email marketing:</strong> Mesaj trimis către baza de date de early adopters (<code>?utm_source=email-app</code>).</li>
+        <li><strong>Facebook:</strong> Postări pe grupuri mari de profil: "Nu sunt singur pe munte" (110.8K membri) și "MUNȚI EXCURSII DRUMEȚII" (19.5K membri).</li>
+        <li><strong>WhatsApp:</strong> Distribuire directă în comunități restrânse de drumeți (<code>?utm_source=whatsapp-app</code>).</li>
+        </ul>
+
+		<h4 class="subsection-title">Email marketing</h4>
+		<p class="content-text">
+			Primul pas în lansarea MVP-ului a fost activarea comunității construite în etapele anterioare. Am trimis o campanie dedicată către lista de <strong>early adopters</strong>, oferindu-le acces prioritar. Această abordare ne-a permis să testăm stabilitatea platformei cu un grup de utilizatori care și-au manifestat deja interesul pentru soluția noastră.
+		</p>
+
+		<div class="mockup-grid" style="margin-bottom: 30px;">
+            <div class="mockup-item" style="max-width: 600px; margin: 0 auto;">
+                <img src="mvp/mail_early_adopters.jpeg" alt="Email trimis catre early adopters">
+                <p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
+                    Campania de email marketing trimisă celor înregistrați pe lista de așteptare.
+                </p>
+                <p style="text-align: center; font-size: 0.85em; margin-top: 5px; color: #333;">
+                    <strong>Vezi mail-ul trimis:</strong> <a href="https://mailchi.mp/812453835f61/trailmates-is-finally-here-6227183" target="_blank">Mailchimp campaign link</a>
+                </p>
+            </div>
+        </div>
+
+		<h4 class="subsection-title">Expansiunea în comunitățile de pe social media</h4>
+		<p class="content-text">
+			Pentru a valida MVP-ul am distribuit lansarea pe cele mai mari grupuri de profil din România. Rezultatele au fost imediate, generând un volum semnificativ de trafic și, mai important, <strong>interacțiuni calitative</strong>.
+		</p>
+		<p class="content-text">
+			Comentariile primite ne-au confirmat că problema "lipsei partenerilor de munte" este una reală și că publicul este receptiv la o platformă dedicată.
+		</p>
+
+		<div class="mockup-grid">
+			<div class="mockup-item">
+				<img src="mvp/postare_facebook_1.png" alt="Postare Grupul Nu sunt singur pe munte">
+				<p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
+					Postarea de pe grupul "Nu sunt singur pe munte" (68 aprecieri, 18 comentarii)
+				</p>
+				<p style="text-align: center; font-size: 0.85em; margin-top: 5px; color: #333;">
+					<strong>Link postare:</strong> https://www.facebook.com/share/p/186tuLZY2D/
+				</p>
+			</div>
+			<div class="mockup-item">
+				<img src="mvp/postare_facebook_2.png" alt="Postare Grupul Munti Excursii">
+				<p style="text-align: center; font-size: 0.9em; color: #666; margin-top: 10px;">
+					Postarea de pe grupul "MUNȚI EXCURSII DRUMEȚII"
+				</p>
+				<p style="text-align: center; font-size: 0.85em; margin-top: 5px; color: #333;">
+					<strong>Link postare:</strong> https://www.facebook.com/share/p/14ZuMp6boCk/
+				</p>
+			</div>
+		</div>
+
+        <h3 class="subsection-title">2. Validare si feedback </h3>
+        <div class="interviews-grid">
+        <div class="interview-card">
+            <h3>Engagement social media</h3>
+            <p class="content-text">
+            Campania de promovare  a generat un interes imediat. Utilizatorii au început să interacționeze cu postările și să acceseze platforma, validând nevoia unei soluții organizate pentru drumeții. Un indicator important al intenției de plată a fost întrebarea directă a utilizatorilor despre costurile serviciului.
+            </p>
+        </div>
+        <div class="interview-card">
+            <h3>Validare prin feedback direct</h3>
+            <p class="content-text">
+            Principalele observații colectate:
+            </p>
+            <ul class="insights-list">
+            <li><strong>Mihai Savu:</strong> Nevoia de a anula participarea și afișarea orașului de pe thumbnail.</li>
+            <li><strong>Violina Mezdrea:</strong> Prioritizarea versiunii mobile pentru utilizarea pe traseu.</li>
+            <li><strong>Securitate:</strong> Protejarea datelor de contact ale organizatorului până la aprobarea cererii.</li>
+            </ul>
+        </div>
+        </div>
+
+		<div class="mockup-grid" style="margin-top: 20px;">
+            <div class="mockup-item">
+                <img src="mvp/comentariu_facebook1.png">
+            </div>
+            <div class="mockup-item">
+                <img src="mvp/comentariu_facebook2.png">
+            </div>
+            <div class="mockup-item">
+                <img src="mvp/comentariu_facebook3.png">
+            </div>
+        </div>
+		
+        <h3 class="subsection-title">3. Web analytics & PostHog insights</h3>
+        
+        <div class="mockup-grid">
+            <div class="mockup-item">
+                <p style="text-align: center; font-weight: bold;"></p>
+                <img src="mvp/posthog_metrics_1.jpeg" alt="PostHog General Metrics">
+            </div>
+            <div class="mockup-item">
+                <p style="text-align: center; font-weight: bold;"></p>
+                <img src="mvp/posthog_metrics_2.jpeg" alt="PostHog UTM Sources">
+            </div>
+        </div>
+
+        <div class="highlight-box" style="margin-top: 20px;">
+            <h4>Date colectate din PostHog:</h4>
+            <ul class="insights-list">
+                <li><strong>Trafic total:</strong> 311 vizitatori unici și 845 de vizualizări de pagină în ultimele 14 zile.</li>
+                <li><strong>Sesiuni:</strong> 330 de sesiuni cu o durată medie de 1 minut și 32 secunde.</li>
+                <li><strong>Bounce Rate:</strong> O rată de doar 12%, ceea ce demonstrează un interes ridicat pentru conținutul aplicației.</li>
+                <li><strong>Distribuție surse:</strong> Facebook-app este sursa dominantă (282 vizitatori), urmată de WhatsApp și Email.</li>
+            </ul>
+        </div>
+
+        <div class="conclusion-box" style="background-color: #f9f9f9; padding: 20px; border-radius: 10px; border-left: 5px solid #2c5f2d; margin-top: 30px;">
+        <h3 style="color: #2c5f2d; margin-bottom: 15px;">Concluzii Milestone 8</h3>
+        <p class="content-text">
+            MVP-ul a fost validat prin utilizare reală. Am demonstrat că există o nevoie clară în piață pentru o platformă organizată de drumeții. Deși suntem în faza de testare gratuită, întrebările utilizatorilor despre costuri și crearea activă de conturi reprezintă dovezi solide că TrailMates rezolvă o problemă pentru care oamenii sunt dispuși să plătească.
+        </p>
+        </div>
+    </section>
+    </div>
 
     <footer>
       <p>&copy; 2025 TrailMates. Toate drepturile rezervate.</p>
