update posthog metrics

--- a/index.html
+++ b/index.html
@@ -4058,10 +4058,10 @@
         <div class="highlight-box" style="margin-top: 20px;">
             <h4>Date colectate din PostHog:</h4>
             <ul class="insights-list">
-                <li><strong>Trafic total:</strong> 311 vizitatori unici și 845 de vizualizări de pagină în ultimele 14 zile.</li>
-                <li><strong>Sesiuni:</strong> 330 de sesiuni cu o durată medie de 1 minut și 32 secunde.</li>
+                <li><strong>Trafic total:</strong> 366 vizitatori unici și 845 de vizualizări de pagină în ultimele 14 zile.</li>
+                <li><strong>Sesiuni:</strong> 397 de sesiuni cu o durată medie de 1 minut și 47 secunde.</li>
                 <li><strong>Bounce Rate:</strong> O rată de doar 12%, ceea ce demonstrează un interes ridicat pentru conținutul aplicației.</li>
-                <li><strong>Distribuție surse:</strong> Facebook-app este sursa dominantă (282 vizitatori), urmată de WhatsApp și Email.</li>
+                <li><strong>Distribuție surse:</strong> Facebook este sursa dominantă (328 vizitatori), urmată de Email și WhatsApp.</li>
             </ul>
         </div>
 
