update mailchip statistics

--- a/index.html
+++ b/index.html
@@ -3980,6 +3980,23 @@
             </div>
         </div>
 
+  <h4 class="subsection-title">Rezultate Mailchimp</h4>
+
+  <div class="mockup-grid mailchimp-stack" style="display:flex; flex-direction:column; gap:20px; align-items:center;">
+    <div class="mockup-item" style="width:100%; max-width: 900px;">
+      <img src="mvp/mailchimp_report_2.png" alt="Mailchimp report - clicks / links">
+      <p style="text-align:center; font-size:0.9em; color:#666; margin-top:10px;">
+        Număr de mail-uri trimise.
+      </p>
+    </div>
+    <div class="mockup-item" style="width:100%; max-width: 900px;">
+      <img src="mvp/mailchimp_report_1.png" alt="Mailchimp report - overview campanie">
+      <p style="text-align:center; font-size:0.9em; color:#666; margin-top:10px;">
+        Performanța campaniei (open rate, click rate, etc.).
+      </p>
+    </div>
+  </div>
+
 		<h4 class="subsection-title">Expansiunea în comunitățile de pe social media</h4>
 		<p class="content-text">
 			Pentru a valida MVP-ul am distribuit lansarea pe cele mai mari grupuri de profil din România. Rezultatele au fost imediate, generând un volum semnificativ de trafic și, mai important, <strong>interacțiuni calitative</strong>.
@@ -4044,12 +4061,12 @@
 		
         <h3 class="subsection-title">3. Web analytics & PostHog insights</h3>
         
-        <div class="mockup-grid">
-            <div class="mockup-item">
+        <div class="mockup-grid" style="display:flex; flex-direction:column; gap:20px; align-items:center;">
+            <div class="mockup-item" style="width:100%; max-width: 900px;">
                 <p style="text-align: center; font-weight: bold;"></p>
                 <img src="mvp/posthog_metrics_1.jpeg" alt="PostHog General Metrics">
             </div>
-            <div class="mockup-item">
+            <div class="mockup-item" style="width:100%; max-width: 900px;">
                 <p style="text-align: center; font-weight: bold;"></p>
                 <img src="mvp/posthog_metrics_2.jpeg" alt="PostHog UTM Sources">
             </div>
